--- a/RockPaperScissor/index.html
+++ b/RockPaperScissor/index.html
@@ -5,7 +5,6 @@
     <title>Rock Paper Scissors Tutorial</title>
   </head>
   <body>
-
     <h2>Computer Choice: <span id="computer-choice"></span></h2>
     <h2>Your Choice: <span id="user-choice"></span></h2>
     <h2>Result: <span id="result"></span></h2>
@@ -13,6 +12,7 @@
     <button id="rock">rock</button>
     <button id="paper">paper</button>
     <button id="scissors">scissors</button>
+    <button id="reset">Reset</button> <!-- Added Reset Button -->
 
     <script src="app.js" charset="utf-8"></script>
   </body>
