--- a/SWgames/Memorygame/index.html
+++ b/SWgames/Memorygame/index.html
@@ -9,6 +9,9 @@
 <body>
 
   <h3>Score:<span id="result"></span></h3>
+  <h3>Score:<span id="result"></span></h3>
+<h3>Time: <span id="timer">0</span> seconds</h3>
+<div class="grid"></div>
 
   <div class="grid">
   </div>
