--- a/SWgames/Rockpaperscissor/index.html
+++ b/SWgames/Rockpaperscissor/index.html
@@ -2,17 +2,21 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Rock Paper Scissors Tutorial</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rock Paper Scissors</title>
+    <link rel="stylesheet" href="style.css"> <!-- Add CSS file -->
   </head>
   <body>
     <h2>Computer Choice: <span id="computer-choice"></span></h2>
     <h2>Your Choice: <span id="user-choice"></span></h2>
     <h2>Result: <span id="result"></span></h2>
 
-    <button id="rock">rock</button>
-    <button id="paper">paper</button>
-    <button id="scissors">scissors</button>
-    <button id="reset">Reset</button> <!-- Added Reset Button -->
+    <div class="button-container">
+      <button class="choice" id="rock">rock</button>
+      <button class="choice" id="paper">paper</button>
+      <button class="choice" id="scissors">scissors</button>
+      <button class="choice reset" id="reset">Reset</button>
+    </div>
 
     <script src="app.js" charset="utf-8"></script>
   </body>
