added enhancement to memory game

--- a/SWgames/Memorygame/index.html
+++ b/SWgames/Memorygame/index.html
@@ -1,20 +1,35 @@
-<!DOCTYPE html>
 <html lang="en" dir="ltr">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Memory Game</title>
-  <link rel="stylesheet" href="style.css"></link>
-  <script src="app.js" charset="utf-8"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <h3>Score:<span id="result"></span></h3>
-  <h3>Score:<span id="result"></span></h3>
-<h3>Time: <span id="timer">0</span> seconds</h3>
-<div class="grid"></div>
+  <audio id="background-music" autoplay loop>
+    <source src="background-music.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 
-  <div class="grid">
-  </div>
+  <h3>Score: <span id="result"></span></h3>
 
+  <div class="grid"></div>
+
+  <footer>
+    If you take time, you are Ghajini
+  </footer>
+
+  <script>
+    window.onload = function() {
+      var audio = document.getElementById("background-music");
+      // Ensure the audio plays even with autoplay restrictions in some browsers
+      audio.play().catch(function(error) {
+        console.log('Audio play failed:', error);
+      });
+    };
+  </script>
+
+  <script src="app.js" charset="utf-8"></script>
 </body>
 </html>
